--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -85,9 +85,10 @@
                         Dokument
                         @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
                         {
-                            <span class="pull-right">
-                                @Html.ActionLink(" ", "UploadDocument", "Document", new { courseId = Model.Id }, new { @class = "glyphicon glyphicon-plus" })
-                            </span>
+                        <span class="pull-right">
+                            @*@Html.ActionLink(" ", "UploadDocument", "Document", new { courseId = Model.Id }, new { @class = "glyphicon glyphicon-plus" })*@
+                            @Html.ActionLink("Lägg till dokument", "UploadDocument", "Document", new { courseId = Model.Id }, null)
+                        </span>
                         }
                     </div>
 
@@ -104,9 +105,10 @@
                     Deltagare
                     @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
                     {
-                        <span class="pull-right">
-                            @Html.ActionLink(" ", "Create", "Student", new { id = Model.Id }, new { @class = "glyphicon glyphicon-plus" })
-                        </span>
+                    <span class="pull-right">
+                        @*@Html.ActionLink(" ", "Create", "Student", new { id = Model.Id }, new { @class = "glyphicon glyphicon-plus" })*@
+                        @Html.ActionLink("Lägg till deltagare", "Create", "Student", new { id = Model.Id }, null)
+                    </span>
                     }
                 </div>
 
