Change from "Elev" to "Deltagare"

--- a/Learny/Views/Shared/_Layout.cshtml
+++ b/Learny/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                     @if (User.IsInRole(RoleName.teacher))
                     {
                         <li>@Html.ActionLink("Kurser", "Index", "Courses")</li>
-                        <li>@Html.ActionLink("Elever", "CreateStudentFromNavBar", "Student")</li>
+                        <li>@Html.ActionLink("Deltagare", "CreateStudentFromNavBar", "Student")</li>
                         <li>@Html.ActionLink("Lärare", "Create", "Teacher")</li>
                     }
                 </ul>
