--- a/Learny/Views/Student/Details.cshtml
+++ b/Learny/Views/Student/Details.cshtml
@@ -2,34 +2,39 @@
 @using Learny.Settings
 
 @{
-    ViewBag.Title = "Elev";
+    ViewBag.Title = "Deltagare";
 }
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-8">
 
-            <h2>@Html.DisplayFor(model => model.Name)</h2>
-            
-            <p>
-                @Html.DisplayNameFor(model => model.Name):
-                @Html.DisplayFor(model => model.Name)
-                <br />
-                @Html.DisplayNameFor(model => model.Email):
-                @Html.DisplayFor(model => model.Email)
-                <br />
-                @Html.DisplayNameFor(model => model.CourseName):
-                @Html.ActionLink(Model.CourseName, "Details", "Courses", new { id = Model.CourseId }, null)
-            </p>
-            
-            @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
-            {
-                <p>
-                    @*@Html.ActionLink("Visa alla elever", "Index") |*@
-                    @Html.ActionLink("Ändra", "Edit", new { email = Model.Email })
-                </p>
-            }
-        </div>
+            <div class="panel panel-default">
 
+                <div class="panel-heading">
+                    <span class="panelHeader">@Html.DisplayFor(model => model.Name)</span>
+                </div>
+
+                <div class="panel-body">
+                    <p>
+                        @Html.DisplayNameFor(model => model.Name):
+                        @Html.DisplayFor(model => model.Name)
+                        <br />
+                        @Html.DisplayNameFor(model => model.Email):
+                        @Html.DisplayFor(model => model.Email)
+                        <br />
+                        @Html.DisplayNameFor(model => model.CourseName):
+                        @Html.ActionLink(Model.CourseName, "Details", "Courses", new { id = Model.CourseId }, null)
+                    </p>
+
+                    @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
+                    {
+                        <p>
+                            @Html.ActionLink("Ändra", "Edit", new { email = Model.Email })
+                        </p>
+                    }
+                </div>
+            </div>
+        </div>
     </div>
 </div>
