--- a/Learny/Views/Student/Edit.cshtml
+++ b/Learny/Views/Student/Edit.cshtml
@@ -2,52 +2,58 @@
 @using Learny.Settings
 
 @{
-    ViewBag.Title = "Ändra elev";
+    ViewBag.Title = "Ändra deltagare";
 }
 
-<h2>@ViewBag.Title</h2>
+<div class="panel panel-default">
 
-@using (Html.BeginForm("Edit", "Student",new { email = Model.Email}, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
+    <div class="panel-heading">
+        <span class="panelHeader">@ViewBag.Title</span>
 
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    </div>
 
+    <div class="panel-body">
 
-        <hr />
+        @using (Html.BeginForm("Edit", "Student", new { email = Model.Email }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
 
-        @Html.HiddenFor(model => model.Id)
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            
+            @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Courses, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(c => c.CourseId, new SelectList(Model.Courses, "Id", "Name", new { Id = Model.CourseId}), new { @class = "form-control" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Courses, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(c => c.CourseId, new SelectList(Model.Courses, "Id", "Name", new { Id = Model.CourseId }), new { @class = "form-control" })
+                </div>
             </div>
-        </div>
 
 
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
-        </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" class="btn btn-default" value="Spara" />
+                </div>
+            </div>
+        }
+
     </div>
-
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Spara" />
-        </div>
-    </div>
-}
-
+</div>
