--- a/Learny/Views/Student/Edit.cshtml
+++ b/Learny/Views/Student/Edit.cshtml
@@ -8,7 +8,7 @@
 <div class="panel panel-default">
 
     <div class="panel-heading">
-        <span class="panelHeader">@ViewBag.Title</span>
+        <span class="panelHeader">Ändra deltagare: @Model.Name</span>
 
     </div>
 
