--- a/Learny/Views/Teacher/Edit.cshtml
+++ b/Learny/Views/Teacher/Edit.cshtml
@@ -5,40 +5,48 @@
     ViewBag.Title = "Ändra lärare";
 }
 
-<h2>@ViewBag.Title</h2>
+<div class="panel panel-default">
 
-@using (Html.BeginForm("Edit", "Teacher",new { email = Model.Email}, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-
-
-        <hr />
-
-        @Html.HiddenFor(model => model.Id)
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
-        </div>
+    <div class="panel-heading">
+        <span class="panelHeader">
+            Ändra lärare: 
+            @Html.DisplayFor(model => model.Name)
+        </span>
     </div>
 
+    <div class="panel-body">
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-        </div>
-    </div>
+        @using (Html.BeginForm("Edit", "Teacher", new { email = Model.Email }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Spara" />
-        </div>
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+
+            @Html.HiddenFor(model => model.Id)
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" class="btn btn-default" value="Spara ändringar" />
+                </div>
+            </div>
+        }
     </div>
-}
+</div>
 
