--- a/Learny/Views/ModuleActivities/Delete.cshtml
+++ b/Learny/Views/ModuleActivities/Delete.cshtml
@@ -61,7 +61,7 @@
             <div class="form-actions no-color">
                 @if (allowDelete)
                 {
-                    <input type="submit" value="Delete" class="btn btn-default" />
+                    <input type="submit" value="Ta bort" class="btn btn-default" />
                 }
                 else
                 {
