--- a/Learny/Views/ModuleActivities/Manage.cshtml
+++ b/Learny/Views/ModuleActivities/Manage.cshtml
@@ -113,7 +113,7 @@
                                 @Html.ActionLink("Avbryt", "Details", new { id = Model.CourseModuleId }, htmlAttributes: new { @class = "btn btn-default" });
                     }
                             @:&nbsp;
-                            @Html.ActionLink("Tag bort", "Delete", new { id = Model.Id }, new { @class = "btn btn-default" })
+                            @Html.ActionLink("Ta bort", "Delete", new { id = Model.Id }, new { @class = "btn btn-default" })
 
                         }
                         else
