--- a/Learny/Views/CourseModules/Details.cshtml
+++ b/Learny/Views/CourseModules/Details.cshtml
@@ -15,7 +15,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading">
-                    <span class="panelHeader">@Html.DisplayFor(model => model.Name)</span>
+                    <span class="panelHeader">Modul: @Html.DisplayFor(model => model.Name)</span>
 
                     @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
                     {
