--- a/Learny/Views/CourseModules/Manage.cshtml
+++ b/Learny/Views/CourseModules/Manage.cshtml
@@ -92,7 +92,7 @@
                                 @Html.ActionLink("Avbryt", "Details", new { id = Model.CourseId }, htmlAttributes: new { @class = "btn btn-default" });
                             }
                             @:&nbsp;
-                            @Html.ActionLink("Tag bort", "Delete", new { id = Model.Id }, new { @class = "btn btn-default" })
+                            @Html.ActionLink("Ta bort", "Delete", new { id = Model.Id }, new { @class = "btn btn-default" })
 
                         }
                         else
