--- a/Learny/Views/Courses/Details.cshtml
+++ b/Learny/Views/Courses/Details.cshtml
@@ -13,7 +13,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading">
-                    <span class="panelHeader">@Html.DisplayFor(model => model.FullCourseName)</span>
+                    <span class="panelHeader">Kurs: @Html.DisplayFor(model => model.FullCourseName)</span>
 
                     @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
                     {
