--- a/Learny/Views/Courses/Edit.cshtml
+++ b/Learny/Views/Courses/Edit.cshtml
@@ -67,7 +67,7 @@
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Spara ändringar" class="btn btn-default" />
                         &nbsp;
-                        @Html.ActionLink("Tag bort", "Delete", new { id = Model.Id }, new { @class = "btn btn-default" })
+                        @Html.ActionLink("Ta bort", "Delete", new { id = Model.Id }, new { @class = "btn btn-default" })
                     </div>
                 </div>
             </div>
