--- a/Learny/Content/Site.css
+++ b/Learny/Content/Site.css
@@ -39,13 +39,45 @@
     color: #fff !important;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 990px) {
 
     .navbar-nav > li > a {
         padding-top: 25px;
         padding-bottom: 15px;
         padding-left: 40px;
     }
+}
+@media (max-width: 995px) {
+    .navbar-header {
+        float: none;
+    }
+
+    .navbar-toggle {
+        display: block;
+    }
+
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+
+        .navbar-collapse.collapse {
+            display: none !important;
+        }
+
+    .navbar-nav {
+        float: none !important;
+        margin: 7.5px -15px;
+    }
+
+        .navbar-nav > li {
+            float: none;
+        }
+
+            .navbar-nav > li > a {
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
 }
 
 /* Set padding to keep content from hitting the edges */
