--- a/Learny/Content/Site.css
+++ b/Learny/Content/Site.css
@@ -21,6 +21,7 @@
     font-weight: bold;
     font-size: 18px
 }
+
 ul {
     display: block;
     list-style-type: none;
@@ -67,6 +68,40 @@ ul {
         padding-left: 40px;
     }
 }
+
+@media (max-width: 992px) {
+    .navbar-header {
+        float: none;
+    }
+
+    .navbar-toggle {
+        display: block;
+    }
+
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+
+    .navbar-nav {
+        float: none !important;
+        margin: 7.5px -15px;
+    }
+
+    .navbar-nav > li {
+        float: none;
+    }
+
+    .navbar-nav > li > a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
