Change from CourseName to FullCourseName

--- a/Learny/Views/CourseModules/Delete.cshtml
+++ b/Learny/Views/CourseModules/Delete.cshtml
@@ -43,7 +43,7 @@
     <div class="panel-body">
         <dl class="dl-horizontal">
             <dt>            @Html.DisplayNameFor(model => model.Course)        </dt>
-            <dd>            @Html.DisplayFor(model => model.Course.Name)        </dd>
+            <dd>            @Html.DisplayFor(model => model.Course.FullCourseName)        </dd>
 
             <dt>&nbsp;</dt>
             <dd></dd>
