--- a/Learny/Views/ModuleActivities/Delete.cshtml
+++ b/Learny/Views/ModuleActivities/Delete.cshtml
@@ -24,7 +24,7 @@
     <div class="panel-body">
         <dl class="dl-horizontal">
             <dt>            @Html.DisplayNameFor(model => model.Module.Course)        </dt>
-            <dd>            @Html.DisplayFor(model => model.Module.Course.Name)        </dd>
+            <dd>            @Html.DisplayFor(model => model.Module.Course.FullCourseName)        </dd>
 
             <dt>            @Html.DisplayNameFor(model => model.Module)        </dt>
             <dd>            @Html.DisplayFor(model => model.Module.Name)        </dd>
