--- a/Learny/Views/ModuleActivities/_ActivitiesPartial.cshtml
+++ b/Learny/Views/ModuleActivities/_ActivitiesPartial.cshtml
@@ -2,23 +2,19 @@
 
 <table class="table">
     <tr class="headerRow">
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
+        <th>            @Html.DisplayNameFor(model => model.ActivityTypeName)        </th>
+        <th>            @Html.DisplayNameFor(model => model.Name)        </th>
+        <th>            @Html.DisplayNameFor(model => model.StartDate)        </th>
+        <th>            @Html.DisplayNameFor(model => model.EndDate)        </th>
+        <th>            @Html.DisplayNameFor(model => model.Description)        </th>
     </tr>
 
     @foreach (var item in Model)
     {
         <tr>
+
+            <td>                @Html.DisplayFor(modelItem => item.ActivityTypeName)      </td>
+
             <td>
                 @if (item.Edit) {
                 
@@ -29,15 +25,11 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 }
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
+
+            <td>                @Html.DisplayFor(modelItem => item.StartDate)            </td>
+            <td>                @Html.DisplayFor(modelItem => item.EndDate)            </td>
+            <td>                @Html.DisplayFor(modelItem => item.Description)            </td>
+
         </tr>
     }
 
